--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 \usepackage{amsmath} % Math formatting
 \numberwithin{equation}{section} % Number equation per section
 \DeclareMathOperator{\Tr}{Tr}
+\DeclareMathOperator{\argmin}{argmin}
+
 
 
 
@@ -99,7 +101,8 @@
 \input{misiakiewicz.tex}
 \newpage
 
-\part{Jianfeng Lu}
+\part{Florent Krzakala: From Spin Glasses to Statistics \& ML}
+\input{krzakala.tex}
 \newpage
 
 
