--- a/misiakiewicz.tex
+++ b/misiakiewicz.tex
@@ -314,8 +314,10 @@ where we plug and chug the previous two lemmas
 
 
 
+\section{Statistical Query Algorithms}
+Consider a map $\phi: \mathcal Y \times \mathcal X \to [-1, 1]$, where you have an objective $\mathbb E_{\mathcal D} [\phi(y,x)]$. This framework is nice because it makes it easy to find tight lower bounds in the form, can the algorithm succseed with tolerance $\mathbb E_{\mathcal D}[\phi(y,x)] + \epsilon$ (for $\epsilon \in [- \delta, \delta]$).
 
-
+You then ask 
 
 
 
